<resources>
    <!--Main Information-->
    <string name="app_name">Tabata Manager</string>

    <!--Main Activity-->
    <string name="label_name">Nom :</string>
    <string name="label_prepare">Prepare</string>
    <string name="label_work">Work</string>
    <string name="label_rest">Rest</string>
    <string name="label_cycles">Cycles</string>

    <!--Button-->
    <string name="button_start">Start</string>
    <string name="button_quick_start">Quick start</string>
    <string name="button_add">Ajouter</string>
    <string name="button_delete">Supprimer</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>

    <string name="initial_number">10</string>

    <string name="title_activity_tabata_full_screen">tabata_full_screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_futur_main">futurMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_tabata_manager">@string/app_name</string>
    <string name="dialogAlert">Il faut selectionner un tabata avant de pouvoir lancer un programme</string>

    <!-- Add Programme Activity -->
    <string name="label_choose_tabatas">Vos tabatas</string>
    <string name="label_selected_tabatas">Tabatas selectionnés</string>

    <!--Menu-->
    <string name="menu_title">Gestionnaire de Tabatas</string>
    <string name="menu_add_tabata">Créer un tabata</string>
    <string name="menu_config_tabata">Gestion des tabatas</string>
    <string name="menu_start_programme">Démarrer une activité</string>
    <string name="menu_programme">Programme</string>

</resources>
